feat: 热更新第一版

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "forceConsistentCasingInFileNames": true,
     "types": [
       "vite/client",
-      "element-plus/global"
+      "element-plus/global",
+      "chrome"
     ],
     "paths": {
       "~/*": ["src/*"]
