--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.1",
   "description": "Simple Chrome Extension Vite Starter Template",
   "scripts": {
-    "dev": "npm run clear && run-p dev:*",
+    "dev": "run-p dev:*",
     "dev:code": "vite build",
     "dev:content": "vite build --config vite.content.config.ts",
-    "dev:json": "node scripts/monitor.js",
+    "dev:copy": "node scripts/monitor.js",
     "clear": "rimraf local"
   },
   "author": "TinssonTai",
   "devDependencies": {
+    "@types/chrome": "^0.0.197",
     "@types/node": "^18.7.17",
     "@vitejs/plugin-vue": "^3.1.0",
     "chokidar": "^3.5.3",
@@ -20,7 +21,8 @@
     "typescript": "^4.8.3",
     "vite": "^3.1.0",
     "vite-plugin-replace": "^0.1.1",
-    "vue": "^3.2.39"
+    "vue": "^3.2.39",
+    "ws": "^8.9.0"
   },
   "dependencies": {
     "element-plus": "^2.2.16"
