--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,12 +11,13 @@
     "128": "/assets/dev.png"
   },
   "permissions": [
+    "tabs",
     "contextMenus",
-    "activeTab"
+    "activeTab",
+    "scripting"
   ],
   "host_permissions": [
-    "http://*/*",
-    "https://*/*"
+    "*://*/*"
   ],
   "background": {
     "service_worker": "/background/index.js"
