--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Simple Chrome Extension Vite Starter Template",
   "scripts": {
-    "dev": "run-p dev:*",
+    "dev": "cross-env CRX_ENV=development run-p dev:*",
     "dev:code": "vite build",
     "dev:content": "vite build --config vite.content.config.ts",
     "dev:copy": "node scripts/monitor.js",
@@ -13,13 +13,22 @@
   "devDependencies": {
     "@types/chrome": "^0.0.197",
     "@types/node": "^18.7.17",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "chokidar": "^3.5.3",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.5.1",
     "fs-extra": "^10.1.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.3",
     "vite": "^3.1.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-replace": "^0.1.1",
     "vue": "^3.2.39",
     "ws": "^8.9.0"
