--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.5.1",
     "fs-extra": "^10.1.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
@@ -35,5 +37,8 @@
   },
   "dependencies": {
     "element-plus": "^2.2.16"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,vue}": "prettier --write --ignore-unknown"
   }
 }
