--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.3",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.8",
     "vite": "^3.1.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-replace": "^0.1.1",
@@ -40,9 +42,6 @@
     "element-plus": "^2.2.16"
   },
   "lint-staged": {
-    "src/*.{js,ts,vue}": [
-      "prettier --write --ignore-unknown",
-      "eslint src --quiet --ext .js,.ts,.vue"
-    ]
+    "src/**/*.{js,ts,vue}": "eslint src --quiet --ext .js,.ts,.vue"
   }
 }
