--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:code": "vite build",
     "dev:content": "vite build --config vite.content.config.ts",
     "dev:copy": "node scripts/monitor.js",
-    "clear": "rimraf local",
+    "build": "cross-env CRX_ENV=production pnpm clear && vite build && vite build --config vite.content.config.ts && node scripts/monitor.js",
+    "clear": "rimraf extension",
     "prepare": "husky install"
   },
   "author": "TinssonTai",
