--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,6 +10,10 @@
     "96": "/assets/dev.png",
     "128": "/assets/dev.png"
   },
+  "action": {
+    "default_title": "插件11",
+    "default_popup": "/popup/index.html"
+  },
   "permissions": [
     "tabs",
     "contextMenus",
@@ -19,6 +23,9 @@
   "host_permissions": [
     "*://*/*"
   ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+  },
   "background": {
     "service_worker": "/background/index.js"
   },
