--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "ws": "^8.9.0"
   },
   "dependencies": {
-    "element-plus": "^2.2.16"
+    "element-plus": "^2.2.16",
+    "idb": "^7.1.0"
   },
   "lint-staged": {
     "src/**/*.{js,ts,vue}": "eslint src --quiet --ext .js,.ts,.vue"
